Updated copyright information, closing #174.